# fedimint

./: .tmuxinator.yml  Cargo.toml  flake.nix
devimint/src/: cli.rs  devfed.rs  envs.rs  external.rs  federation.rs  gatewayd.rs  tests.rs  util.rs  vars.rs
fedimint-api-client/: Cargo.toml
fedimint-api-client/src/: api.rs
fedimint-build/src/: lib.rs
fedimint-client/src/: db.rs  lib.rs
fedimint-client/src/sm/: dbtx.rs  executor.rs
fedimint-core/: Cargo.toml
fedimint-core/src/: bitcoin_migration.rs
fedimint-core/src/db/: mod.rs  notifications.rs
fedimint-core/src/encoding/: btc.rs  common.rs  generic.rs  ln.rs  mod.rs
fedimint-core/src/net/: api_announcement.rs
fedimint-recoverytool/src/: main.rs
fedimint-server/src/config/: distributedgen.rs
fedimint-testing/src/: fixtures.rs  gateway.rs  ln.rs
fedimint-testing/src/btc/: mock.rs
fedimint-testing/src/ln/: mock.rs  real.rs
gateway/cli/src/: lightning_commands.rs  main.rs
gateway/integration_tests/src/: main.rs
gateway/ln-gateway/: Cargo.toml
gateway/ln-gateway/proto/: gateway_lnrpc.proto
gateway/ln-gateway/src/: config.rs  db.rs  error.rs  federation_manager.rs  lib.rs  lightning_manager.rs  types.rs
gateway/ln-gateway/src/gateway_module_v2/: complete_sm.rs  mod.rs  receive_sm.rs  send_sm.rs
gateway/ln-gateway/src/lightning/: cln.rs  ldk.rs  lnd.rs  mod.rs
gateway/ln-gateway/src/rpc/: mod.rs  rpc_client.rs  rpc_server.rs
gateway/ln-gateway/src/state_machine/: complete.rs  mod.rs  pay.rs
gateway/ln-gateway/tests/: integration_tests.rs
misc/: mprocs.yaml
modules/fedimint-dlc-client/: Cargo.toml
modules/fedimint-dlc-client/src/: api.rs  cli.rs  lib.rs  receive_sm.rs  send_sm.rs
modules/fedimint-dlc-common/: Cargo.toml
modules/fedimint-dlc-common/src/: config.rs  lib.rs
modules/fedimint-dlc-server/: Cargo.toml
modules/fedimint-dlc-server/src/: db.rs  lib.rs
modules/fedimint-dlc-tests/: Cargo.toml
modules/fedimint-dlc-tests/tests/: mock.rs  tests.rs
modules/fedimint-ln-client/: Cargo.toml
modules/fedimint-ln-client/src/: db.rs  lib.rs  receive.rs
modules/fedimint-ln-tests/tests/: tests.rs
modules/fedimint-lnv2-client/: Cargo.toml
modules/fedimint-lnv2-client/src/: lib.rs  send_sm.rs
modules/fedimint-mint-client/: Cargo.toml
modules/fedimint-mint-client/src/: lib.rs  output.rs
modules/fedimint-mint-tests/tests/: tests.rs
modules/fedimint-wallet-client/src/: deposit.rs
nix/: flakebox.nix
nix/overlays/: vss-java.nix  vss.nix
nix/pkgs/: vss.nix
scripts/tests/: test-ci-all.sh
